--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@civicactions/data-catalog-components": "^0.1.9",
+    "@civicactions/data-catalog-components": "^0.1.11",
     "@reach/router": "^1.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "excerpts": "^0.0.3",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-js-pagination": "^3.0.3",
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.1.0",
+    "swagger-ui-react": "^3.25.1"
   },
   "scripts": {
     "start": "react-scripts start",
