move destination of git clone

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,12 +50,13 @@ jobs:
             cd ~/sandbox
             dktl install --demo-backend
             dktl drush en frontend -y
-            cd ~/sandbox/docroot
+            cd ~/sandbox/src
             git clone --single-branch -b $CIRCLE_BRANCH https://github.com/GetDKAN/data-catalog-react.git frontend
             dktl dc exec cli npm install --prefix /var/www/docroot/frontend --unsafe-perm
             dktl dc exec cli npm run build --prefix /var/www/docroot/frontend --unsafe-perm
             dktl drush config-set frontend.config build_folder '/build' -y
             dktl drush config-set frontend.config frontend_path '/frontend' -y
+            dktl ln -s ~/sandbox/src/frontend ~/sandbox/docroot/frontend
             dktl drush cr
             cd ~/sandbox/docroot/frontend
             node_modules/cypress/bin/cypress install
