--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@civicactions/data-catalog-app",
-  "version": "1.0.3",
+  "version": "2.0.0-alpha.1",
   "private": false,
   "homepage": "frontend/build",
   "dependencies": {
-    "@civicactions/data-catalog-components": "^1.5.0",
+    "@civicactions/data-catalog-components": "^2.0.0-alpha.1",
+    "@civicactions/data-catalog-services": "^1.0.0-alpha.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
