--- a/package.json
+++ b/package.json
@@ -44,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/cypress": "^6.0.0",
+    "@testing-library/dom": "^7.16.1",
+    "eslint-plugin-cypress": "^2.11.1"
   }
 }
