Remove node-sass and add services and uswds

--- a/package.json
+++ b/package.json
@@ -4,24 +4,26 @@
   "private": false,
   "homepage": "frontend/build",
   "dependencies": {
-    "@civicactions/data-catalog-components": "^1.5.0",
+    "@civicactions/data-catalog-components": "^2.0.0",
+    "@civicactions/data-catalog-services": "^1.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "@reach/router": "^1.3.3",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@uswds/uswds": "^3.0.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
     "excerpts": "^0.0.3",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^5.2.1",
     "react-js-pagination": "^3.0.3",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "3.4.1",
+    "sass": "^1.53.0",
     "swagger-ui-react": "3.25.0"
   },
   "scripts": {
