--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@civicactions/data-catalog-app",
-  "version": "1.0.3",
+  "name": "@aytodecadiz/cadiz-data-catalog-app",
+  "version": "1.0.0",
   "private": false,
   "homepage": "frontend/build",
   "dependencies": {
@@ -18,12 +18,13 @@
     "excerpts": "^0.0.3",
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
+    "ionicons": "^6.0.2",
     "node-sass": "^4.14.1",
     "prop-types": "^15.8.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
-    "react-i18next": "^11.16.7",
+    "react-i18next": "^11.17.0",
     "react-js-pagination": "^3.0.3",
     "react-scripts": "3.4.1",
     "swagger-ui-react": "3.25.0"
