--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "frontend/build",
   "dependencies": {
     "@civicactions/data-catalog-components": "^2.0.0",
-    "@civicactions/data-catalog-services": "^1.5.0",
+    "@civicactions/data-catalog-services": "^1.6.0-alpha.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
