--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_ROOT_URL = "http://dkan.localtest.me/api/1"
+REACT_APP_ROOT_URL = "https://demo.getdkan.org/api/1"
 SASS_PATH = ./node_modules:./node_modules/@uswds/uswds/packages:src
