--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^29.0.0",
+    "@types/node": "^18.7.15",
+    "@types/react": "^18.0.18",
+    "@types/react-dom": "^18.0.6",
     "@uswds/uswds": "^3.0.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
@@ -28,7 +32,8 @@
     "react-scripts": "^4.0.3",
     "react-text-truncate": "^0.19.0",
     "sass": "^1.53.0",
-    "swagger-ui-react": "3.25.0"
+    "swagger-ui-react": "3.25.0",
+    "typescript": "^4.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
