Remove node-sass. Add sass.

--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
     "excerpts": "^0.0.3",
-    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-js-pagination": "^3.0.3",
     "react-scripts": "3.4.1",
+    "sass": "^1.53.0",
     "swagger-ui-react": "3.25.0"
   },
   "scripts": {
