--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,12 +30,7 @@ jobs:
             mv ../frontend src
             dktl frontend:install
             dktl frontend:build
-            cd src
-            mkdir tests
-            mv frontend/cypress tests/cypress
-            mv frontend/cypress.json tests
-            mv frontend/package.json tests
-            dktl project:test-cypress
+            dktl frontend:test
       - store_artifacts:
           path: src/frontend/cypress/screenshots
       - store_artifacts:
