pin swagger-client version

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "homepage": "frontend/build",
   "dependencies": {
-    "@civicactions/data-catalog-components": "^1.14.0",
+    "@civicactions/data-catalog-components": "^1.15.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
@@ -13,18 +13,19 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
     "excerpts": "^0.0.3",
+    "html-to-react": "1.3.4",
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "ionicons": "^6.0.2",
     "prop-types": "^15.8.1",
-    "html-to-react": "1.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-i18next": "^11.17.0",
     "react-js-pagination": "^3.0.3",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.3",
     "sass": "^1.55.0",
+    "swagger-client": "3.18.5",
     "swagger-ui-react": "3.25.0"
   },
   "scripts": {
