Change build system to Vite and upgrade dependencies

--- a/package.json
+++ b/package.json
@@ -4,29 +4,30 @@
   "private": false,
   "homepage": "frontend/build",
   "dependencies": {
-    "@civicactions/data-catalog-components": "^1.5.0",
+    "@civicactions/data-catalog-components": "^1.16.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@reach/router": "^1.3.3",
-    "axios": "^0.21.1",
+    "axios": "^1.6.2",
     "bootstrap": "^4.4.1",
     "excerpts": "^0.0.3",
     "html-to-react": "1.3.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-helmet": "^6.1.0",
     "react-js-pagination": "^3.0.3",
-    "react-scripts": "3.4.1",
-    "sass": "^1.55.0",
-    "swagger-ui-react": "3.25.0"
+    "react-loader-advanced": "^1.7.1",
+    "react-loading-spin": "^2.1.9",
+    "react-router-dom": "^6.10.0",
+    "swagger-ui-react": "^4.15.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "test": "vitest",
+    "preview": "vite preview",
+    "sass": "sass ./src/theme/index.scss ./src/theme/index.css"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,11 +45,9 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/cypress": "^6.0.0",
-    "@testing-library/dom": "^7.16.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "eslint-plugin-cypress": "^2.11.1"
+    "reactstrap": "^9.2.1",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.2",
+    "sass": "^1.69.5"
   }
 }
