--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "react-dom": "18.2.0",
     "react-helmet": "^6.1.0",
     "react-js-pagination": "^3.0.3",
-    "react-loader-advanced": "^1.7.1",
-    "react-loading-spin": "^2.1.9",
     "react-router-dom": "^6.10.0",
     "swagger-ui-react": "^4.15.5"
   },
@@ -45,9 +43,10 @@
     ]
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.0",
     "reactstrap": "^9.2.1",
+    "sass": "^1.69.5",
     "vite": "^4.4.9",
-    "vitest": "^0.34.2",
-    "sass": "^1.69.5"
+    "vitest": "^0.34.2"
   }
 }
