--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
       - run:
           name: Run Cypress tests
           command: |
-            cd docroot/frontend && npx cypress run --config baseUrl="https://test-$CIRCLE_WORKFLOW_JOB_ID.ddev.site"
+            cd docroot/frontend && npx cypress run --config baseUrl="http://test-$CIRCLE_WORKFLOW_JOB_ID.ddev.site"
         
       - store_artifacts:
           path: dkan/cypress/screenshots
