--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,37 +1,57 @@
-version: 2
+version: '2.1'
+orbs:
+  docker: circleci/docker@2.2.0
+
+commands:
+  install-ddev:
+    steps:
+      - run:
+          name: Install DDev
+          command: |
+            set -e
+            sudo rm -rf /etc/apt/sources.list.d/heroku.list
+            sudo apt-get update
+            sudo apt-get install ca-certificates
+            curl https://apt.fury.io/drud/gpg.key | sudo apt-key add -
+            echo "deb https://apt.fury.io/drud/ * *" | sudo tee -a /etc/apt/sources.list.d/ddev.list
+            sudo apt update && sudo apt install -y ddev
 jobs:
   build:
     parallelism: 1
     machine:
       image: ubuntu-2004:current
-    environment:
-      TEST_RESULTS: /tmp/test-results
-      DKTL_VERSION: "4.2.11"
     steps:
       - checkout
-      - run:
-          name: Install DKTL
-          command: |
-            git clone -b $DKTL_VERSION https://github.com/GetDKAN/dkan-tools.git ~/dkan-tools
-            echo "export PATH=~/dkan-tools/bin:$PATH" >> $BASH_ENV
+      - install-ddev  
       - run:
           name: Set up dirs
           command: |
             cd .. &&  mv project frontend
             mkdir project
-
       - run:
-          name: Create DKAN site with frontend; run tests
+          name: Build Frontend into a full DKAN site
           command: |
-            dktl init --dkan=2.x-dev
-            dktl make
-            dktl install
-            dktl install:sample
-            mv ../frontend src
-            dktl frontend:install
-            dktl frontend:build
-            dktl frontend:test
+            which ddev
+            ddev --version
+            ddev config --project-name test-$CIRCLE_WORKFLOW_JOB_ID --project-type drupal9 --docroot docroot --create-docroot
+            ddev get getdkan/ddev-dkan
+            ddev restart
+            ddev status
+            ddev dkan-init --force
+            ddev dkan-site-install
+            ddev dkan-sample-content
+            ddev dkan-frontend-install
+            rm -r docroot/frontend
+            mv ../frontend docroot/frontend
+            cd docroot/frontend && npm install
+            cd ../../
+            ddev dkan-frontend-build
+      - run:
+          name: Run Cypress tests
+          command: |
+            cd docroot/frontend && npx cypress run --config baseUrl="http://test-$CIRCLE_WORKFLOW_JOB_ID.ddev.site"
+        
       - store_artifacts:
-          path: src/frontend/cypress/screenshots
+          path: dkan/cypress/screenshots
       - store_artifacts:
-          path: src/frontend/cypress/videos
+          path: dkan/cypress/videos
