--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@civicactions/data-catalog-app",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "private": false,
   "homepage": "frontend/build",
   "dependencies": {
-    "@civicactions/data-catalog-components": "1.17.1",
+    "@civicactions/data-catalog-components": "1.18.0-alpha.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
