--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@civicactions/data-catalog-app",
-  "version": "1.5.2",
+  "version": "1.6.0",
   "private": false,
   "homepage": "frontend/build",
   "dependencies": {
-    "@civicactions/data-catalog-components": "1.17.1",
+    "@civicactions/data-catalog-components": "1.18.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "axios": "^1.6.2",
+    "@tanstack/react-query": "^5.14.1",
     "bootstrap": "^4.4.1",
     "excerpts": "^0.0.3",
     "html-to-react": "1.7.0",
