--- a/package.json
+++ b/package.json
@@ -9,23 +9,22 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@tanstack/react-query": "^5.14.1",
-    "bootstrap": "^4.4.1",
-    "excerpts": "^0.0.3",
-    "html-to-react": "1.7.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@tailwindcss/vite": "^4.0.7",
+    "@tanstack/react-query": "^5.66.7",
+    "@tanstack/react-table": "^8.21.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
-    "react-js-pagination": "^3.0.3",
-    "react-router-dom": "^6.10.0",
-    "swagger-ui-react": "^4.15.5"
+    "react-router-dom": "^7.2.0",
+    "tailwindcss": "^4.0.7"
   },
   "scripts": {
     "start": "vite",
     "build": "vite build --base=/frontend/build/static/",
     "test": "vitest",
     "preview": "vite preview",
-    "sass": "sass ./src/theme/index.scss ./src/theme/index.css"
+    "sass": "sass ./src/theme/index.scss ./src/theme/index.css",
+    "tailwind:init": "tailwindcss init -p"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,10 +43,15 @@
   },
   "devDependencies": {
     "@testing-library/cypress": "^10.0.1",
-    "@vitejs/plugin-react": "^4.2.0",
-    "reactstrap": "^9.2.1",
-    "sass": "^1.69.5",
-    "vite": "^4.4.9",
-    "vitest": "^0.34.2"
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@types/react-helmet": "^6.1.11",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
+    "@vitejs/plugin-react": "^4.3.4",
+    "sass": "^1.85.0",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.1",
+    "vitest": "^3.0.6"
   }
 }
