--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "homepage": "frontend/build",
   "dependencies": {
-    "@civicactions/data-catalog-components": "1.18.1",
+    "@civicactions/data-catalog-components": "2.0.0-alpha.11",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
