--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": false,
   "homepage": "frontend/build",
   "dependencies": {
-    "@civicactions/data-catalog-components": "2.0.0-alpha.11",
+    "@civicactions/data-catalog-components": "2.0.0-alpha.12",
+    "@civicactions/swagger-ui-layout": "^0.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
@@ -18,11 +19,12 @@
     "@tailwindcss/vite": "^4.0.7",
     "@tanstack/react-query": "^5.66.7",
     "@tanstack/react-table": "^8.21.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.2.0",
+    "swagger-ui-react": "^5.20.1",
     "tailwindcss": "^4.0.7"
   },
   "scripts": {
@@ -53,12 +55,16 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-helmet": "^6.1.11",
+    "@types/swagger-ui-react": "^5.18.0",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/browser": "^3.0.9",
+    "playwright": "^1.51.1",
     "sass": "^1.85.0",
     "typescript": "^5.7.3",
     "vite": "^6.1.1",
-    "vitest": "^3.0.6"
+    "vitest": "^3.0.9",
+    "vitest-browser-react": "^0.1.1"
   }
 }
