--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@civicactions/data-catalog-app",
-  "version": "1.6.1",
+  "version": "2.0.0-alpha.1",
   "private": false,
   "homepage": "frontend/build",
   "dependencies": {
-    "@civicactions/data-catalog-components": "2.0.0-alpha.12",
+    "@civicactions/data-catalog-components": "2.0.0-alpha.13",
     "@civicactions/swagger-ui-layout": "^0.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -23,7 +23,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-paginate": "^8.3.0",
-    "react-router-dom": "^7.2.0",
+    "react-router-dom": "7.2.0",
     "swagger-ui-react": "^5.20.1",
     "tailwindcss": "^4.0.7"
   },
