--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-paginate": "^8.3.0",
     "react-router-dom": "7.2.0",
     "swagger-ui-react": "^5.20.1",
-    "tailwindcss": "^4.0.7"
+    "tailwindcss": "^4.0.7",
+    "validator": "^13.15.0"
   },
   "scripts": {
     "start": "vite",
@@ -56,6 +57,7 @@
     "@types/react-dom": "^19.0.4",
     "@types/react-helmet": "^6.1.11",
     "@types/swagger-ui-react": "^5.18.0",
+    "@types/validator": "^13.12.3",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "@vitejs/plugin-react": "^4.3.4",
